@@ -585,6 +585,7 @@
 #define IDS_STATUSLIST_CONTEXT_EXPLORE  3331
 #define IDS_STATUSLIST_LOCKBROKEN       3340
 #define IDS_STATUSLIST_LOCKSTOLEN       3341
+#define IDS_STATUSLIST_NESTED           3350
 #define IDS_PROGRS_CONFLICTSOCCURED_WARNING 3500
 #define IDS_PROGRS_CONFLICTSOCCURED     3501
 #define IDS_PROGRS_DRYRUN               3502
